New optimization: optimize UI, add multi chain, upgrade and introduce jar library version
Signed-off-by: Hevin <390330302@qq.com>